--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "@heroicons/react": "^2.0.13",
+    "next": "^13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
