--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@heroicons/react": "^2.0.13",
     "next": "^13.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-twitter-embed": "^4.0.4"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
