--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-timeago": "^4.1.3",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "react-hot-toast": "^2.4.0",
     "react-timeago": "^7.1.0",
     "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
